> Updated speeds and vector scales
# 0.00.46 (30273) Apr 7, 2009
> update remote control arrows on mode change
> make sure velocity-acceleration proportion ratios match those in the play area
# 0.00.45 (30270) Apr 7, 2009
4/7/09 Added internationalization
# 0.00.44 (30207) Apr 1, 2009
4/1/09 Removed frictionless checkbox
# 0.00.43 (30156) Apr 1, 2009
4/1/09 Initial deploy of ladybug-2d simulation independent of moving-man
# 1.20.42 (30144) Mar 31, 2009
> Fixed: path doesn't clear on reset
> reduced radius in circular mode so the acceleration vector is longer
# 1.20.41 (30131) Mar 31, 2009
3/31/09 added caching to the default trace graphics for performance improvements
# 1.20.40 (29629) Mar 22, 2009
3/22/09 Batch deploy for Alpha Simulation Tests 2, svn 29628
# 1.20.39 (29352) Mar 10, 2009
> Switch to position mode when dragging ladybug
# 1.20.38 (29343) Mar 10, 2009
3/10/09 change the latest Ladybug back to the behavior where the trace continues (and erases the beginning)
# 1.20.37 (29341) Mar 10, 2009
3/10/09 change the latest Ladybug back to the behavior where the trace continues (and erases the beginning)
# 1.20.36 (29139) Mar 2, 2009
> Removed bounding box from graphics
> Workaround for faded out buttons in time control panel

# 1.20.35 (28935) Feb 22, 2009
> Fixed: when you drive the bug with the remote using velocity or acceleration, the bug does not face the direction of velocity (always faces the same direction)
> Fixed: Rewind button should be disabled when the timeline knob is at t=0
> Fixed: Slowest mode should be slower (maybe 1/2 this speed)
> Fixed: Switching from playback mode to record should clear the vectors on the bug
> Fixed: Clear button should put the sim in record mode if it was in playback mode
> Reduced speed of all preset motions by 30%
> Fixed: Exception when switching back and forth between record and playback